option java_outer_classname = "LCTerminalRecieveDateSave";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.terminal";

message TerminalRecieveDateSave{
	required	int64	terminalId			=1;
	required	int64	recieveDate			=2;
}